.node_modules/syntax-error/test/sources/run2.js
})();
process.exit(1);
(function () {
